--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     <form>
-        <label for="name">Name :</label>
+        <label for="name">User_Name :</label>
         <input type="text" id="name">
+        <label for="name">Email_Id :</label>
         <input type="text" id="">
-        <input type="text" id="">
-        <label for="name">Name :</label>
+        <button type="submit" onclick="handleClick()">Sign Up</button>
     </form>
 </body>
 </html>
